      be faster and scale better with the number of threads.

- sht:
    - new function `pseudo_analysis_general` for iterative least-squares analyis
      of spherical maps on arbitrary grids
    - rework the general SHT routines, leading to more performance and smaller
      memory footprint

- totalconvolve:
    - API CHANGE!
      bring interface more in line with SHT functions.
      This basically means replacing `ofactor` parameters with `sigma_min`,
      `sigma_max` and `npoints`.


0.29.0:
- general:
    - rework multi-threading infrastructure to allow integration with external
      thread pool implementations.
    - make more extensive use of uninitialized arays. This helps performance
      and scaling, especially for small SHTs.

- fft:
    - add the functions `r2r_separable_fht` and `r2r_genuine_fht`, which perform
      Hartley transforms using the commonly adopted convention, i.e.
          FHT(x) = FFT(x).real - FFT(x).imag
      instead of the unusual convention of `r2r_separable_hartley` and
      `r2r_genuine_hartley`, which use
          FHT(x) = FFT(x).real + FFT(x).imag
      `r2r_separable_hartley` and `r2r_genuine_hartley` should not be used in
      new code, but they are kept for backwards compatibility.

- sht:
    - new functions `synthesis_general` and `adjoint_synthesis_general`
      for SHTs on maps without any constraint on pixel locations.
      This allows, for example, using maps whose pixel positions have been
      distorted by lensing, or QuadCube maps.
    - functions `synthesis`, `adjoint_synthesis`, `synthesis_deriv1`,
      and `pseudo_analysis`: introduce an optional integer parameter `mmax`
      and allow it to be different from `lmax` (`mmax==lmax` was implicitly
      assumed so far)

- nufft:
    - re-write core part of the 2D Type 1 NUFFT, which was miscompiled on some
      platforms. Unfortunately, the new implementation is slightly slower on
      x86-64.