@@ -12,8 +12,10 @@
 - totalconvolve:
     - API CHANGE!
       bring interface more in line with SHT functions.
-      This basically means replacing `ofactor` parameters with `sigma_min`,
+      This basically means replacing the `ofactor` parameter with `sigma_min`,
       `sigma_max` and `npoints`.
+      (The old syntax is still supported, but should not be unsed any longer in
+      new projects.)
 
 
 0.29.0:
